# fips-180

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.sh
.github/workflows/: cmake-single-platform.yml
lib/: CMakeLists.txt
lib/include/: lib.h
lib/src/: block.h  lib.cpp  pad.cpp  pad.h  word.cpp  word.h
test/: CMakeLists.txt  test_fips_180.cpp
test/block/: test_block.cpp
test/pad/: test_pad.cpp
test/word/: test_word.cpp  test_word.h  test_word_operations.cpp  test_word_shift.cpp
